# funcnodes_pyodide

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: npm_build.yaml  npm_publish_main.yml
src/funcnodes_pyodide/: __init__.py  patch.py  worker.py
src/funcnodes_pyodide/static/: funcnodes_pyodide_react_flow-style.css  funcnodes_pyodide_react_flow.css  funcnodes_pyodide_react_flow.es.js  funcnodes_pyodide_react_flow.iife.js  funcnodes_pyodide_react_flow.js  index.html  index.js  index.js.map  pyodideDedicatedWorker.js  pyodideDedicatedWorker.js.map  pyodideSharedWorker.js  pyodideSharedWorker.js.map  pyodideWorkerLayout.js  pyodideWorkerLayout.js.map  pyodideWorkerLogic.js  pyodideWorkerLogic.js.map  style.css
src/react/: index.html  package.json  rollup.config.mjs  tsconfig.json  vite.browser.config.js  vite.config.js  vite.worker.config.js
src/react/src/: browser_index.tsx  global.d.ts  index.tsx  mountRegistry.ts  observeDisconnect.ts  pyodideDedicatedWorker.mts  pyodideSharedWorker.mts  pyodideWebWorker.mts  pyodideWorker.mjs  pyodideWorkerLayout.mts  pyodideWorkerLogic.mts  pyodineworker.ts  sharedWorkerPorts.ts  workerFactory.browser.ts  workerFactory.ts  workerLifecycle.ts
src/react/tests/: index.load-param.test.js  mountRegistry.test.js  observeDisconnect.test.js  package.peer-deps.test.js  pyodideWorkerLogic.install.test.js  pyodideWorkerLogic.pyodide-version.test.js  pyodideWorkerLogic.receive-bytes-clone.test.js  pyodineworker.dispatch.test.js  (+8 more)
tests/: test_import.py  test_patch_logging.py  test_worker_info.py
(+4 files in other folders)
